--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -102,9 +102,8 @@
             <article>Testimonial 3</article>
         </section>
         <section>
-            <h2>Contact
+            <h2>Contact</h2>
                 <p>We like to know new people</p>
-            </h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                 Id Sextilius factum negabat. Quo tandem modo? At eum nihili 
