--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -99,7 +99,6 @@
                         Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?
                     </p>
             </article>
-            </div>
             <article>
                 <p>Social</p>
                 <h3>Bestiarum vero nullum iudicium puto.</h3>
@@ -108,7 +107,9 @@
                     Non igitur bene. Quid enim est a Chrysippo praetermissum in 
                     Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est 
                     docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-            </article></div></section>
+            </article>
+        </div>
+        </div></section>
         <section><div>
             <header>
             <h2>
