fix comment 17-index.html

--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -83,7 +83,7 @@
                 </p>
                 </div>
         </div></section>
-        <!-- Latest news seciton -->
+        <!-- Latest news section -->
         <section><div>
             <header>
             <h2>
