--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -227,7 +227,7 @@
             <ul>
                 <li>
                     <a href="https://www.facebook.com/HolbertonSchool/">
-                        <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="25" height="25" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <title>
                         Facebook icon
                         </title>
@@ -236,7 +236,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/holbertonschool"><svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <a href="https://twitter.com/holbertonschool">
+                    <svg width="25" height="25" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <title>
                     Twitter icon
                     </title>
@@ -245,7 +246,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/holbertonschool/"><svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <a href="https://www.instagram.com/holbertonschool/">
+                    <svg width="25" height="25" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <title>
                     Instagram icon
                     </title>
